[gd_scene load_steps=4 format=2]

[ext_resource path="res://resource/my_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/NewFilePopup.gd" type="Script" id=2]
[ext_resource path="res://assets/image_test.png" type="Texture" id=3]

[node name="new_file_pop_window" type="WindowDialog"]
margin_right = 360.0
margin_bottom = 228.0
rect_min_size = Vector2( 326, 204 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "New File"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -9.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 347.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 33.0
text = "Name"

[node name="Filename" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 297.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "unnamed"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 301.0
margin_right = 347.0
margin_bottom = 33.0
text = ".png"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 347.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 74.0
margin_bottom = 33.0
text = "Palette"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer4"]
margin_left = 78.0
margin_right = 347.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Item 0"

[node name="PalettePreview" type="TextureRect" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 347.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 347.0
margin_bottom = 131.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 58.0
margin_bottom = 33.0
text = "Width"

[node name="W" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 62.0
margin_right = 168.0
margin_bottom = 33.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 128.0
value = 32.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 172.0
margin_right = 237.0
margin_bottom = 33.0
text = "Height"

[node name="H" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 241.0
margin_right = 347.0
margin_bottom = 33.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 128.0
value = 32.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 347.0
margin_bottom = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 347.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=#44FF44] - OK[/color]"
text = " - OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 347.0
margin_bottom = 219.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_right = 171.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Confirm"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 175.0
margin_right = 347.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Cancel"
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Filename" to="." method="_on_Filename_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer4/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button2" to="." method="_on_Button2_pressed"]
